application-manifest/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: spring-framework-petclinic
  labels:
    argocd.argoproj.io/managed-by: openshift-gitops
