application-manifest/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: spring-framework-petclinic
  name: spring-framework-petclinic
  namespace: sample
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: spring-framework-petclinic
